[package]
name = "cash"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "2.0.3"
thiserror = "1.0" 
arrayref = "0.3.6"
borsh = "1.5.1"
bs58 = "0.5.0"
spl-token = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="4.0.0", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
[lib]
crate-type = ["cdylib", "lib"]
